feat: create book endpoint
